src/webui/src/sass/main.scss
/* ... */
textarea.big { height: 25vh; margin: 2.6rem 0; }
.small.question-set { margin: 1.3rem auto;
  .check { width: 0.1rem; min-width: 0.1rem; padding-right: 0rem; }
  .title { width: 42%; }
  .controls { width: 56%; }
  .non-cell { margin-bottom: 0.7rem; margin-top: 2.6rem; }
  .trow { height: 4rem; }
}
.small.question-set > .row:nth-child(even) { background-color: white; }
.popover { font-family: "Source Sans Pro", sans-serif; }
.popover, .popover * { border-radius: 0; }
.popover-title { background-color: $blue-tint; font-weight: 600; text-transform: uppercase; }
acmg { display: block; }
.acmg-popover {
  h3 { font-weight: 700; font-size: 1.4rem; color: $header-black; margin: 0; margin-bottom: 0.7rem; margin-top: 1.3rem; }
  p { font-weight: 300; margin: 0; word-wrap: break-word; word-break: break-word; }
}
.acmg-body { margin-top: 1.3rem; }
.acmg { font-family: "Source Sans Pro", sans-serif; text-align: left; cursor: pointer; color: rgba(255,255,255,0.8); transition: all 0.3s ease-in-out; border-left: 0.7rem solid hsla(0,0,100,0.25);
  h4 { font-size: 1.2rem; line-height: 1.3; font-weight: 700; text-transform: uppercase; padding: 0.75rem 0; margin: 0; margin-left: 0.7rem; }
  &.grey {  background-color: hsla(0,0,25,1);  }
  &.ba {  background-color: hsla(350,75,25,1);  }
  &.bs {  background-color: hsla(300,75,25,1);  }
  &.bp {  background-color: hsla(250,75,25,1);  }
  &.re {  background-color: hsla(200,75,25,1);  }
  &.pp {  background-color: hsla(150,75,25,1);  }
  &.pm {  background-color: hsla(100,75,25,1);  }
  &.ps {  background-color: hsla(50,75,25,1);   }
  &.pvs { background-color: hsla(0,75,25,1);    }
  &:hover { color: white; border-left: 0.7rem solid hsla(0,0,0,0); }
}
.content-list { width: 100%; margin-right: 2.6rem;
  .analysis-row { cursor: pointer; border-bottom: 1px dotted $icon-half-black; margin-bottom: 2.6rem; }
  .analysis-row:last-child { margin-bottom: 1.3rem; }
  h3 { font-size: 1.4rem; font-weight: 500; letter-spacing: 0.035rem; text-transform: none; margin: 0; }
  p { font-size: 1.0rem; font-weight: 400; letter-spacing: 0.1rem; word-spacing: 1rem; text-transform: uppercase; margin: 0.6rem 0; }
}
.card-controls { z-index: -2; height: 4.8rem; text-align: right; background-color: #e6e6e6; margin-left: 1.3rem; margin-right: 1.3rem; padding-left: 2.6rem; padding-right: 2.6rem; padding-top: 1.3rem; margin-bottom: 7rem; display: flex; justify-content: flex-end;
  .left { margin-right: auto; }
  button ~ button { margin-left: 1.3rem; }
  .grouped-controls { display: flex; }
  .form-control-outline { margin-right: 0.7rem; border: 1px solid $half-black; }
  .form-control { font-size: 1.2rem; font-weight: 500; text-transform: uppercase; letter-spacing: 0.2rem; padding: 0.25rem 0.75rem; background-color: Transparent; color: $button-black; border: none; height: 2.5rem; box-shadow: none; border-radius: 0; }
}
.card-controls.collapsed { height: 0rem; }

.app .content { margin-left: 30.5rem; margin-right: 3.9rem; margin-top: 6.5rem; }
.app .search-area { margin-left: 42rem; }
.modal-content { background-color: Transparent; box-shadow: none; border-radius: 0px; border: 0; }
.modal-dialog { margin: 5vh 10vw; width: auto; }
.modal-lg { width: inherit; }
.modal-backdrop { bottom: 0; position: fixed; }
.interpretation-bar { margin: 6.5rem 0; display: flex; justify-content: flex-end;
  input { width: 20rem; }
  .left { margin-right: auto; }
  button { margin-left: 1.3rem; }
}
.no-alleles, .no-results { height: calc(100vh - 19rem); display: flex; justify-content: center; align-items: center; flex-direction: column; text-align: center;
  h2 { font-size: 2rem; text-transform: uppercase; font-weight: 400; letter-spacing: 0.05rem; }
  h4 { font-size: 1.7rem; font-weight: 300; word-spacing: 0.1rem; }
}
nav.skinny, nav.skinny * { transition: all 0.3s ease-in-out; }
nav.skinny { z-index: 10; padding: 1.3rem 3.9rem 1.3rem 2.6rem; display: flex; justify-content: space-between; align-items: center; background-color: $blue; color: white;
  .breadcrumbs { display: flex; align-items: center; }
  .crumb { margin-right: 1.3rem; opacity: 0.5; cursor: pointer; }
  .crumb.active, .crumb:hover { opacity: 1; }
  .crumb.active { cursor: default; }
  .crumb.arrow { transform: rotate(-90deg); }
  p { font-size: 1.0rem; margin-bottom: 0.35rem; font-weight: 500; letter-spacing: 0.2rem; text-transform: uppercase; }
  h2, h3 ,h4, h5 { font-family: "Source Sans Pro", sans-serif; font-size: 1.3rem; font-weight: 600; margin: 0; text-transform: uppercase; }
  input { position: absolute; width: calc(20vw - 3.9rem); top: 0; right: 3.9rem; color: white; border-bottom: 1px solid rgba(255,255,255,0.5);
    &::placeholder { color: rgba(255,255,255,0.8); }
  }
  .search-section { position: relative; width: 0%; min-width: 2.6rem; overflow: hidden; height: 2.6rem; }
  .search-section:hover { width: 20vw; cursor: pointer; }
  .search-section.active { width: 20vw; }
  .magnify { position: absolute; top: 0; right: 0; }
  .magnify:hover * { stroke: white !important; }
}
nav.skinny.collapsed { overflow: hidden; max-height: 2.6rem;
  p { opacity: 0; position: absolute; }
  .crumb.arrow { opacity: 0; }
  .magnify { width: 18px !important; }
}
.search-results { padding: 2.6rem; height: 50vh; margin-left: 42rem; background-color: $button-black; color: white; font-size: 1.3rem; font-family: "Source Sans Pro", sans-serif; }
/* ... */

